# netlist

./: .gitignore  Makefile  dune-project  flake.nix  run-tests
docs/: netlist.tex
src/: dune  graph.ml  netlist_ast.ml  netlist_parser.mly  netlist_printer.ml  netlist_simulator.ml  scheduler.ml
tests/clock_div/: clock_div-01.out
tests/cm2/: cm2-01.out  cm2-02.out  cm2-03.out  cm2-04.out  cm2-05.out
tests/fulladder/: fulladder-01.in  fulladder-01.out
tests/loic/: loic-01.in  loic-01.out  loic-02.in  loic-02.out  loic-03.in  loic-03.out  loic-04.in  loic-04.out  loic-05.in  loic-05.out  loic-06.in  loic-06.out  loic-07.in  loic-07.out  loic-08.in  loic-08.out  loic-09.in  loic-09.out  loic-10.in  loic-10.out  loic-11.in  loic-11.out  loic-12.in  loic-12.out  loic-13.in  loic-13.out  loic-14.in  loic-14.out  loic-15.in  loic-15.out  loic.net  loic.rom.rom
tests/nadder/: nadder-01.in  nadder-01.out
tests/ram/: ram-01.in  ram-01.out
tests/rom/: rom-01.out  rom.net
